# llm-from-scratch

./: .gitignore  ABLATION.md  LICENSE  README.md  ablation.py  bpe.py  config.py  data.py  eval.py  generate_sample.py  layers.py  model.py  plot_ablation.py  pyproject.toml  requirements.txt  sft.py  sft_data.py  train.py  verify_setup.py
.github/workflows/: test.yml
notes/: agent_implementation_log.md  layers_cheatsheet.md
notes/sessions/: 2026-05-17.md
tests/: _dummies.py  conftest.py  test_ablation.py  test_bpe.py  test_data.py  test_eval.py  test_layers.py  test_model.py  test_sft.py  test_train.py
